# airflow-multi-tenant

./: .env.example  .gitignore  =5.0.0  CHANGELOG.md  CLAUDE.md  E2E_TEST_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MYSQL_CDC_SETUP.md  Makefile  README.md  SETUP_COMPLETE.md  TESTING.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-audit-service.txt  requirements-control-plane-lock.txt  requirements-control-plane.txt  requirements-dev.txt  requirements-kafka-consumer.txt  requirements-lock.txt  requirements-test.txt  requirements.txt  run_all_tests.sh
control_plane/: alembic.ini  reset_db.py
debezium/: integration-connector.json  register_connector.py
docker/: Dockerfile.airflow  Dockerfile.audit-service  Dockerfile.control-plane  Dockerfile.kafka-connect  Dockerfile.kafka-consumer  entrypoint-secrets.sh  kafka-create-topics.sh  mongodb-init.js  mysql-init.sql  mysql.cnf
docs/: AUDIT-TRAIL-DESIGN.md  CUSTOM_RUN_IDS.md  DEAD_LETTER_QUEUE.md  DEBEZIUM_CDC_IMPLEMENTATION.md  DISPATCHER_PATTERN.md  DOCKER_FIX.md  DST_IMPLEMENTATION.md  FIXES_APPLIED.md  FOREIGN_KEY_FIX.md  HOTSPOT_FEATURE.md  K8S_READINESS_SUMMARY.md  KAFKA_CONSUMER.md  KAFKA_EVENT_DRIVEN_IMPLEMENTATION.md  OPERATIONAL_SAFETY_CHECK.md  QUICK_START_TESTING.md  SETUP.md  SPEC_COMPLIANCE_AUDIT.md  TEST_FIXTURES_FIX.md  WORKER_EFFICIENCY_IMPROVEMENTS.md
k8s/: K8S_DEPLOYMENT_GUIDE.md
release_notes/: v0.1.5.md
scripts/: control_plane_integrations.postman_collection.json  generate_fernet_key.py  init_audit_schema.sql  seed_s3_to_mongo.sql
tests/: test_audit_masking.py  (+2 more)
(+113 files in other folders)
