[project]
name = "airflow-multi-tenant"
version = "0.1.3"
description = "A scalable Airflow-based architecture supporting multi-tenancy with hybrid scheduling, CDC, and reusable connectors"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["connectors/tests", "control_plane/tests", "airflow/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers --disable-warnings"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]
